--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://diorditsavlad.github.io/goit-js-hw-10-food-service-/",
+  "homepage": "https://katerina1986/goit-js-hw-10-food/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service-/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food/"
   },
   "repository": {
     "type": "git",
